; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_utils.c_debug_node_type.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_utils.c_debug_node_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@debug_node_type.names = internal constant [8 x i8*] [i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.5, i32 0, i32 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.6, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.7, i32 0, i32 0)], align 16
@.str = private unnamed_addr constant [19 x i8] c"HLSL_IR_ASSIGNMENT\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"HLSL_IR_CONSTANT\00", align 1
@.str.2 = private unnamed_addr constant [20 x i8] c"HLSL_IR_CONSTRUCTOR\00", align 1
@.str.3 = private unnamed_addr constant [14 x i8] c"HLSL_IR_DEREF\00", align 1
@.str.4 = private unnamed_addr constant [13 x i8] c"HLSL_IR_EXPR\00", align 1
@.str.5 = private unnamed_addr constant [11 x i8] c"HLSL_IR_IF\00", align 1
@.str.6 = private unnamed_addr constant [13 x i8] c"HLSL_IR_JUMP\00", align 1
@.str.7 = private unnamed_addr constant [16 x i8] c"HLSL_IR_SWIZZLE\00", align 1
@.str.8 = private unnamed_addr constant [21 x i8] c"Unexpected node type\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @debug_node_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @debug_node_type(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @ARRAY_SIZE(i8** getelementptr inbounds ([8 x i8*], [8 x i8*]* @debug_node_type.names, i64 0, i64 0))
  %6 = icmp uge i32 %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %13

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = zext i32 %9 to i64
  %11 = getelementptr inbounds [8 x i8*], [8 x i8*]* @debug_node_type.names, i64 0, i64 %10
  %12 = load i8*, i8** %11, align 8
  store i8* %12, i8** %2, align 8
  br label %13

13:                                               ; preds = %8, %7
  %14 = load i8*, i8** %2, align 8
  ret i8* %14
}

declare dso_local i32 @ARRAY_SIZE(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
